<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86EFEFEF"
    tools:context=".Fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_topImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_paymentHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_topImages">

        <TextView
            android:id="@+id/tv_payhistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_paymentHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_payhistory" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_govtServices"
        app:layout_constraintTop_toBottomOf="@id/cl_paymentHistory">

        <TextView
            android:id="@+id/tv_govtservices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/govt_services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5sp"
            app:cardMaxElevation="5sp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_govtservices">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_img1"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/onlinepayment"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Tourisum"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img1"
                    app:layout_constraintRight_toRightOf="@id/iv_img1"
                    app:layout_constraintTop_toBottomOf="@id/iv_img1" />


                <ImageView
                    android:id="@+id/iv_img2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/receipt"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img1"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Transport"
                    app:layout_constraintTop_toBottomOf="@id/iv_img2"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img2"
                    app:layout_constraintRight_toRightOf="@id/iv_img2"/>


                <ImageView
                    android:id="@+id/iv_img3"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/services"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img2"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Banking"
                    app:layout_constraintTop_toBottomOf="@id/iv_img3"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img3"
                    app:layout_constraintRight_toRightOf="@id/iv_img3"/>


                <ImageView
                    android:id="@+id/iv_img4"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/services"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img3"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Multimedia"
                    app:layout_constraintTop_toBottomOf="@id/iv_img4"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img4"
                    app:layout_constraintRight_toRightOf="@id/iv_img4"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_otherServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_govtServices">

        <TextView
            android:id="@+id/tv_otherservices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5sp"
            app:cardMaxElevation="5sp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otherservices">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_img11"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/onlinepayment"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img22"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Care Center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img11"
                    app:layout_constraintRight_toRightOf="@id/iv_img11"
                    app:layout_constraintTop_toBottomOf="@id/iv_img11" />


                <ImageView
                    android:id="@+id/iv_img22"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/receipt"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img33"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img11"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Health"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img22"
                    app:layout_constraintRight_toRightOf="@id/iv_img22"
                    app:layout_constraintTop_toBottomOf="@id/iv_img22" />


                <ImageView
                    android:id="@+id/iv_img33"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/services"
                    app:layout_constraintEnd_toStartOf="@+id/iv_img44"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img22"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mechanical"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img33"
                    app:layout_constraintRight_toRightOf="@id/iv_img33"
                    app:layout_constraintTop_toBottomOf="@id/iv_img33" />


                <ImageView
                    android:id="@+id/iv_img44"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/services"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_img33"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Emergency"
                    app:layout_constraintLeft_toLeftOf="@id/iv_img44"
                    app:layout_constraintRight_toRightOf="@id/iv_img44"
                    app:layout_constraintTop_toBottomOf="@id/iv_img44" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">


        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_marginTop="8dp"
            android:src="@drawable/home"
            app:layout_constraintEnd_toStartOf="@+id/btn_services"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item1"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_home"
            app:layout_constraintStart_toStartOf="@+id/btn_home"
            app:layout_constraintTop_toBottomOf="@id/btn_home" />

        <ImageView
            android:id="@+id/btn_services"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:src="@drawable/services"
            app:layout_constraintBottom_toBottomOf="@+id/btn_home"
            app:layout_constraintEnd_toStartOf="@+id/btn_posts"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_home"
            app:layout_constraintTop_toTopOf="@+id/btn_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item2"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_services"
            app:layout_constraintStart_toStartOf="@+id/btn_services"
            app:layout_constraintTop_toBottomOf="@+id/btn_services" />

        <ImageView
            android:id="@+id/btn_posts"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_marginTop="8dp"
            android:src="@drawable/posts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_services"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item3"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_posts"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="@+id/btn_posts"
            app:layout_constraintTop_toBottomOf="@+id/btn_posts" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>